# pdmt

./: .gitignore  Main.edp  Makefile.am  README.md  algorithms.edp  configure.ac  convexhull.cpp  debug.edp  feSpacesAndVariables.edp  getCommandLineInput.edp  meshIO.edp  para-dual-2d.edp  pdmt.cpp  pdmt.hpp
.github/workflows/: UB22.04_NO_MEDIO.yml  UB22.04_NO_MEDIO_OPENMPI.yml  UB22.04_WITH_MEDIO.yml  UB24.04_NO_MEDIO.yml  UB24.04_NO_MEDIO_OPENMPI.yml  UB24.04_WITH_MEDIO.yml  c-cpp.yml
cpp/: Makefile.am  convexHull.hpp  medCoupling.cpp  pdmt.cpp  pdmt.hpp  pdmtFunctions.hpp  polyMeshWrite.hpp  vtkWriter.hpp
ext/: Makefile.am
msh/: disk1hole.msh  disk5holes.vtk  pentagon.mesh  triangle1hole.med
run/: Main.edp  Makefile.am  meshIO.edp  meshIO.idp  pdmt.edp
src/: Makefile.am  convexHull.hpp  medWriter.hpp  pdmt.cpp  pdmtFunctions.hpp  pdmtHelp.hpp  pdmtVersion.hpp  polyMeshWrite.hpp  typWriter.hpp  vtkWriter.hpp
test/: .gitignore  Makefile.am  UnitTestCovexHull.edp  mcUT1.cpp  mcUT2.cpp  mcUT3.cpp  medCouplingUnitTest.cpp
